<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bike A Thon</string>
    <string name="action_settings">Settings</string>

    <string name="home_header">Learn More</string>
    <string name="sign_up_header">Register</string>
    <string name="your_name">Name...</string>
    <string name="your_org">Organization...</string>

    <!-- Actions -->
    <string name="show_days">Show Days</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!-- Dates -->
    <string name="March24th">March 24th, 2015</string>
    <string name="March25th">March 25th, 2015</string>
    <string name="March26th">March 26th, 2015</string>

</resources>
