<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/user_info"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/users_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/button_blue_press"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:maxLines="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/users_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_org"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/button_blue_press"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:maxLines="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/show_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_days"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_press"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/day_selection"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/march24thButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/March24th"
                    android:textColor="@color/white"
                    android:background="@drawable/button_blue_press"
                    android:layout_margin="16dp"/>

                <Button
                    android:id="@+id/march25thButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/March25th"
                    android:textColor="@color/white"
                    android:background="@drawable/button_blue_press"
                    android:layout_margin="16dp"/>

                <Button
                    android:id="@+id/march26thButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/March26th"
                    android:textColor="@color/white"
                    android:background="@drawable/button_blue_press"
                    android:layout_margin="16dp"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>